[gd_scene load_steps=16 format=2]

[ext_resource path="res://World/Rooms/StartRoom.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/Rooms/Room1.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/Rooms/Room4.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/Rooms/Room2.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/Rooms/CornerRoom1.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/Rooms/SingleRoom1.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/Rooms/Room3.tscn" type="PackedScene" id=7]
[ext_resource path="res://World/Rooms/CornerRoom2.tscn" type="PackedScene" id=8]
[ext_resource path="res://World/Rooms/LinearRoom1.tscn" type="PackedScene" id=9]
[ext_resource path="res://World/Rooms/BossRoomTop.tscn" type="PackedScene" id=10]
[ext_resource path="res://World/Rooms/Room6.tscn" type="PackedScene" id=11]
[ext_resource path="res://World/Rooms/CornerRoom3.tscn" type="PackedScene" id=12]
[ext_resource path="res://World/Rooms/SingleRoom2.tscn" type="PackedScene" id=13]
[ext_resource path="res://World/Rooms/CornerRoom4.tscn" type="PackedScene" id=14]
[ext_resource path="res://World/Maps/map1.gd" type="Script" id=15]

[node name="map1" type="Node2D"]
script = ExtResource( 15 )

[node name="StartRoom" parent="." instance=ExtResource( 1 )]
position = Vector2( 64, 64 )

[node name="Room1" parent="." instance=ExtResource( 2 )]
position = Vector2( 64, 896 )

[node name="Enemies" parent="Room1" index="4"]
margin_left = -75.0
margin_top = -900.0
margin_right = -75.0
margin_bottom = -900.0

[node name="Crab" parent="Room1/Enemies" index="0"]
position = Vector2( 267, 1054 )
ACCELERATION = 3000

[node name="Crab2" parent="Room1/Enemies" index="1"]
position = Vector2( 804, 1188 )

[node name="Crab3" parent="Room1/Enemies" index="2"]
position = Vector2( 235, 1311 )

[node name="Crab4" parent="Room1/Enemies" index="3"]
position = Vector2( 783, 1008 )

[node name="Crab5" parent="Room1/Enemies" index="4"]
position = Vector2( 771, 1425 )

[node name="Crab6" parent="Room1/Enemies" index="5"]
position = Vector2( 421, 1356 )

[node name="Crab7" parent="Room1/Enemies" index="6"]
position = Vector2( 511, 1146 )

[node name="Crab8" parent="Room1/Enemies" index="7"]
position = Vector2( 1032, 1419 )

[node name="Crab9" parent="Room1/Enemies" index="8"]
position = Vector2( 232, 1488 )

[node name="Crab10" parent="Room1/Enemies" index="9"]
position = Vector2( 568, 1452 )

[node name="Room4" parent="." instance=ExtResource( 3 )]
position = Vector2( -1184, 1727 )

[node name="Room2" parent="." instance=ExtResource( 4 )]
position = Vector2( 1216, -832 )

[node name="CornerRoom1" parent="." instance=ExtResource( 5 )]
position = Vector2( 1216, 896 )

[node name="SingleRoom1" parent="." instance=ExtResource( 6 )]
position = Vector2( 1217, 1727 )

[node name="SingleRoom2" parent="." instance=ExtResource( 6 )]
position = Vector2( 2368, 64 )

[node name="Room3" parent="." instance=ExtResource( 7 )]
position = Vector2( -1184, -1664 )

[node name="CornerRoom2" parent="." instance=ExtResource( 8 )]
position = Vector2( 1216, -768 )

[node name="LinearRoom1" parent="." instance=ExtResource( 9 )]
position = Vector2( 64, -1600 )

[node name="BossRoomTop" parent="." instance=ExtResource( 10 )]
position = Vector2( 64, -2432 )

[node name="Room5" parent="." instance=ExtResource( 11 )]
position = Vector2( -1088, 896 )

[node name="Room6" parent="." instance=ExtResource( 12 )]
position = Vector2( -1088, 1727 )

[node name="SingleRoom3" parent="." instance=ExtResource( 13 )]
position = Vector2( -1088, -768 )

[node name="Room7" parent="." instance=ExtResource( 14 )]
position = Vector2( -1088, 64 )

[connection signal="room_cleared" from="Room1" to="." method="_on_Room1_room_cleared"]
[connection signal="room_cleared" from="Room4" to="." method="_on_Room4_room_cleared"]
[connection signal="room_cleared" from="Room2" to="." method="_on_Room2_room_cleared"]
[connection signal="room_cleared" from="CornerRoom1" to="." method="_on_CornerRoom1_room_cleared"]
[connection signal="room_cleared" from="SingleRoom1" to="." method="_on_SingleRoom1_room_cleared"]
[connection signal="room_cleared" from="SingleRoom2" to="." method="_on_SingleRoom2_room_cleared"]
[connection signal="room_cleared" from="Room3" to="." method="_on_Room3_room_cleared"]
[connection signal="room_cleared" from="CornerRoom2" to="." method="_on_CornerRoom2_room_cleared"]
[connection signal="room_cleared" from="LinearRoom1" to="." method="_on_LinearRoom1_room_cleared"]
[connection signal="room_cleared" from="BossRoomTop" to="." method="_on_BossRoomTop_room_cleared"]
[connection signal="room_cleared" from="Room5" to="." method="_on_Room5_room_cleared"]
[connection signal="room_cleared" from="Room6" to="." method="_on_Room6_room_cleared"]
[connection signal="room_cleared" from="SingleRoom3" to="." method="_on_SingleRoom3_room_cleared"]
[connection signal="room_cleared" from="Room7" to="." method="_on_Room7_room_cleared"]

[editable path="StartRoom"]
[editable path="Room1"]
[editable path="Room4"]
[editable path="Room2"]
[editable path="CornerRoom1"]
[editable path="SingleRoom1"]
[editable path="SingleRoom2"]
[editable path="Room3"]
[editable path="CornerRoom2"]
[editable path="LinearRoom1"]
[editable path="BossRoomTop"]
[editable path="Room5"]
[editable path="Room6"]
[editable path="SingleRoom3"]
[editable path="Room7"]
